patches to download page to fix some display issues, layout issues, and organization issues, from jeremy

--- a/css/layout-rtl.css
+++ b/css/layout-rtl.css
@@ -331,6 +331,11 @@ select#lang {
 		padding-right: 0px;
 		}
 
+	.dbox.donate ul.amounts li {
+		margin-left: 0px;
+		margin-right: 15px;
+		}
+
 #footer .about {
 	padding-left: 30px;
 	border-left: 1px solid #ddd;
