--- a/css/layout.css
+++ b/css/layout.css
@@ -67,97 +67,92 @@ body {
 				width: auto;
 			}
 			
-	#calltoaction {
-		height: 30px;
-		float: right;
-		margin-top: 10px;
-		margin-right: 5px;
-		text-align: center;
-	}
+#calltoaction {
+  height: 30px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 5px;
+  text-align: center;
+  }
 	
-    #calltoaction ul {
-      padding: 0;
-      margin: 0px;
-      height: 30px;
-      list-style: none;
-      float: right;
+  #calltoaction ul {
+    padding: 0;
+    margin: 0px;
+    height: 30px;
+    list-style: none;
+    float: right;
     }
-    	     
-      #calltoaction ul li {
-        list-style: none;
-        display: inline;
-        float: none;
-        width: 100px;
-        margin-left: 0px;
-      }
-      
-      #calltoaction ul li a:link,
-      #calltoaction ul li a:visited {
-        background: url(../images/cta-buttons.jpg) top center no-repeat #885ca4;
-        padding: 8px 8px 0px;
-        color: #FFFFFF;
-        font-weight: bold;
-        text-decoration: none;
-        font-size: 1.067em;
-        line-height: 1.067em;
-        height: 22px;
-        width: 84px;
-        float: left;
-        text-shadow: 0px -1px 2px #111111, 0px 1px 2px #666666;
-      }
 
-      #calltoaction ul li:first-child a:link,
-      #calltoaction ul li:first-child a:visited {
-        background: url(../images/cta-buttons.jpg) top left no-repeat #885ca4;
-		  -webkit-border-top-left-radius: 7px;
-		  -webkit-border-bottom-left-radius: 7px;
-		  -moz-border-radius-topleft: 7px;
-		  -moz-border-radius-bottomleft: 7px;
-		  border-top-left-radius: 7px;
-		  border-bottom-left-radius: 7px;
-        padding-left: 7px;
-        width: 85px;
-        }
+  #calltoaction ul li {
+    list-style: none;
+    display: inline;
+    float: none;
+    width: 100px;
+    margin-left: 0px;
+    }
+  
+  #calltoaction ul li a:link,
+  #calltoaction ul li a:visited {
+    display: block;
+    background: url(../images/cta-buttons.jpg) top center no-repeat #885ca4;
+    padding: 4px 8px;
+    color: #FFFFFF;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 22px;
+    height: 22px;
+    width: 84px;
+    float: left;
+    text-shadow: 1px 1px 0px #111111;
+    }
 
-      #calltoaction ul li:last-child a:link,
-      #calltoaction ul li:last-child a:visited {
-        background: url(../images/cta-buttons.jpg) top right no-repeat #885ca4;
-		  -webkit-border-top-right-radius: 7px;
-		  -webkit-border-bottom-right-radius: 7px;
-		  -moz-border-radius-topright: 7px;
-		  -moz-border-radius-bottomright: 7px;
-		  border-top-right-radius: 7px;
-		  border-bottom-right-radius: 7px;
-        padding-right: 9px;
-        width: 83px;
-        color: #FFFFFF;
-       }
-      
-      #calltoaction ul li:hover a {
-        background: url(../images/cta-buttons.jpg) bottom center no-repeat #ff9800;
-        font-weight: bold;
-        text-shadow: 1px 1px 4px #111111;
-        }
-      
-      #calltoaction ul li:hover:first-child a {
-        background: url(../images/cta-buttons.jpg) bottom left no-repeat #ff9800;
-        -webkit-border-top-left-radius: 7px;
-		  -webkit-border-bottom-left-radius: 7px;
-		  -moz-border-radius-topleft: 7px;
-		  -moz-border-radius-bottomleft: 7px;
-		  border-top-left-radius: 7px;
-		  border-bottom-left-radius: 7px;
-        }
+  #calltoaction ul li:hover a {
+    background: url(../images/cta-buttons.jpg) bottom center no-repeat #ff9800;
+    font-weight: bold;
+    text-shadow: 1px 1px 0px #111111;
+    }
+  
+  #calltoaction ul li:first-child a:link,
+  #calltoaction ul li:first-child a:visited,
+  #calltoaction ul li:hover:first-child a {
+    -webkit-border-top-left-radius: 7px;
+    -webkit-border-bottom-left-radius: 7px;
+    -moz-border-radius-topleft: 7px;
+    -moz-border-radius-bottomleft: 7px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    }
 
-      #calltoaction ul li:hover:last-child a {
-        background: url(../images/cta-buttons.jpg) bottom right no-repeat #ff9800;
-		  -webkit-border-top-right-radius: 7px;
-		  -webkit-border-bottom-right-radius: 7px;
-		  -moz-border-radius-topright: 7px;
-		  -moz-border-radius-bottomright: 7px;
-		  border-top-right-radius: 7px;
-		  border-bottom-right-radius: 7px;
-        }
+  #calltoaction ul li:first-child a:link,
+  #calltoaction ul li:first-child a:visited {
+    background: url(../images/cta-buttons.jpg) top left no-repeat #885ca4;
+    }
+
+  #calltoaction ul li:hover:first-child a {
+    background: url(../images/cta-buttons.jpg) bottom left no-repeat #ff9800;
+    }
+
+  #calltoaction ul li:last-child a:link,
+  #calltoaction ul li:last-child a:visited,
+  #calltoaction ul li:hover:last-child a {
+    -webkit-border-top-right-radius: 7px;
+    -webkit-border-bottom-right-radius: 7px;
+    -moz-border-radius-topright: 7px;
+    -moz-border-radius-bottomright: 7px;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+    }
+
+  #calltoaction ul li:last-child a:link,
+  #calltoaction ul li:last-child a:visited {
+    background: url(../images/cta-buttons.jpg) top right no-repeat #885ca4;
+    color: #FFFFFF;
+    }
+  
+  #calltoaction ul li:hover:last-child a {
+    background: url(../images/cta-buttons.jpg) bottom right no-repeat #ff9800;
+    }
 
 
 /* BANNER ------------*/
@@ -495,17 +490,18 @@ table tr img {
 .smartphone24,
 .sourcecode24 {
   display: block;
-  line-height: 34px;
+  line-height: 32px;
   padding: 0px 0 0px 33px;
   }
 
 .accordionButton {
-  background: url("../images/table-head.jpg") repeat-x scroll left top #885CA4;
+  background: url("../images/table-title.jpg") repeat-x left bottom #885CA4;
   color: #FFFFFF;
   margin: 0;
   padding-left: 10px;
   font-size: 1.1em;
   font-weight: bold;
+  height: 32px;
   width: 700px;
   float: left;
   _float: none;  /* Float works in all browsers but IE6 */
@@ -530,6 +526,10 @@ table tr img {
   _float: none;  /* Float works in all browsers but IE6 */
   background: #FFFFFF;
   display: block;
+  }
+
+.accordionContent .fauxhead {
+  width: 710px;
   }
 
 .package {
@@ -1025,7 +1025,7 @@ small {
 
 	.dbox.donate ul.amounts li {
 		display: inline-block;
-		margin-left: 20px;
+		margin-left: 15px;
 		}
 
 	.dbox.donate ul.amounts li label {
